--- a/PAGS/contact.html
+++ b/PAGS/contact.html
@@ -11,9 +11,9 @@
 <header>
         <h1>CONTACT</h1>
 </header>
-
-<div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+<div class="form2">
+<div class="mb-3 padding 30px">
+    <label for="exampleFormControlInput1" class="form-label">Nombres</label>
     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
   </div>
 <div class="mb-3">
@@ -24,7 +24,7 @@
   <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 </div>
-
+</div>
 
 <!--fin form-->
 <div class="home">
