--- a/PAGS/media.html
+++ b/PAGS/media.html
@@ -13,7 +13,7 @@
 <header>
   		<h1>MEDIA</h1>
 </header>
-
+<div class="slides">
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 	<div class="carousel-inner">
 	  <div class="carousel-item active">
@@ -59,7 +59,7 @@
 	  <span class="visually-hidden">Next</span>
 	</button>
   </div>
-
+</div>
 
 <!--
 <div id="fotoGrid">
