--- a/PAGS/music.html
+++ b/PAGS/music.html
@@ -13,33 +13,16 @@
 <header>
   		<h1>MUSIC</h1>
 </header>
-
+<div class="form2">
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/172505900&color=%23040404&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/liaisons-dangereuses-los-ninos-del-parque-gmind-brute-remix" title="Liaisons Dangereuses - Los Niños Del Parque (GMIND Brute Remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Liaisons Dangereuses - Los Niños Del Parque (GMIND Brute Remix)</a></div>
-
-
-
-
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/129776806&color=%23222a2f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/survivor-eye-of-the-tiger" title="Survivor - Eye of the tiger (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Survivor - Eye of the tiger (GMIND original remix)</a></div>
-
-
-
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/80689019&color=%23222523&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/vangelis-blade-runner-gmind" title="Vangelis - Blade Runner (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Vangelis - Blade Runner (GMIND original remix)</a></div>
-
-
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/77724254&color=%23383838&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/gmind-dr-gonzo-original-mix" title="GMIND - Dr. Gonzo (Original mix)" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND - Dr. Gonzo (Original mix)</a></div>
-
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/42498659&color=%23151516&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/liaisons-dangereuses-los-ni-os" title="Liaisons Dangereuses - Los Niños del Parque (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Liaisons Dangereuses - Los Niños del Parque (GMIND original remix)</a></div>
-
-
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/30937461&color=%230f0c09&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/berlin-express-die-russen" title="Berlin Express - Die Russen Kommen (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Berlin Express - Die Russen Kommen (GMIND original remix)</a></div>
-
-
 <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/17331953&color=%230d1016&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/robotiko-rejekto-umsturz-gmind" title="Robotiko Rejekto - Umsturz jetzt! (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Robotiko Rejekto - Umsturz jetzt! (GMIND original remix)</a></div>
+</div>
 
-
-<div class="texto">
-
-</div>	
 
 <div class="home">
 <li><a href="../index.html" target="_blank">HOME</a> </li>
