--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
   </li>
 </ul>
 </div>
+<br>
+<br>
+<div class="nav justify-content-center">
+ <img src="IMG/index.gif"></img>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="nav justify-content-center">
+<audio controls autoplay!important>
+  <source src="Vangelis - Blade Runner (GMIND original remix).mp3" type="audio/mpeg">
+</audio>
+</div>
 
 <footer>
 <div class="footer">
