--- a/PAGS/tour.html
+++ b/PAGS/tour.html
@@ -14,8 +14,9 @@
 <header>
   		<h1>TOUR</h1>
 </header>
-<div id="flyer">
-		<img src="../IMG/f0.jpg" alt="1">
+<div>
+	<h4>more dates coming soon...</h4>
+</header>
 </div>
 <br>
 <br>
@@ -24,10 +25,13 @@
   		<h2>OLD DATES</h2>
 </header>
 
-
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<div class="slides">
+<div id="carouselExampleControls" class="carousel slide slides" data-bs-ride="carousel">
 	<div class="carousel-inner">
 	  <div class="carousel-item active">
+		<img src="../IMG/f0.jpg" class="d-block w-100" alt="...">
+	  </div>
+	  <div class="carousel-item">
 		<img src="../IMG/f19.jpg" class="d-block w-100" alt="...">
 	  </div>
 	  <div class="carousel-item">
@@ -38,9 +42,6 @@
 	  </div>
 	  <div class="carousel-item">
 		<img src="../IMG/f16.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/f15.jpg" class="d-block w-100" alt="...">
 	  </div>
 	  <div class="carousel-item">
 		<img src="../IMG/f14.jpg" class="d-block w-100" alt="...">
@@ -56,9 +57,6 @@
 	  </div>
 	  <div class="carousel-item">
 		<img src="../IMG/f10.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/f9.jpg" class="d-block w-100" alt="...">
 	  </div>
 	  <div class="carousel-item">
 		<img src="../IMG/f8.jpg" class="d-block w-100" alt="...">
@@ -93,7 +91,7 @@
 	  <span class="visually-hidden">Next</span>
 	</button>
   </div>
-
+</div>
 
 <!--<div id="tourGrid">
 	<div>
