Tercera Entrega Proyecto Final

--- a/PAGS/contact.html
+++ b/PAGS/contact.html
@@ -1,45 +1,76 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <title>BIO</title>
-        <meta charset=utf-10>
-        <meta name=viewport content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+ <title>CONTACT</title>
+ <meta charset=utf-10>
+ <meta name=viewport content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+ <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body style="background-image:url('../IMG/g9.jpg'); background-size: cover;">
+<!--Title-->
 <header>
-        <h1>CONTACT</h1>
+ <h1>CONTACT</h1>
 </header>
-
+<!--Nav Menu-->
+<div class="menu">
+  <ul class="nav justify-content-center">
+   <li class="nav-item" >
+    <a class="nav-link active" aria-current="page" href="../PAGS/bio.html">Bio</a>
+   </li>
+   <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="../PAGS/Tour.html">Tour</a>
+   </li>
+   <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="../PAGS/Music.html">Music</a>
+   </li>
+   <li class="nav-item" >
+    <a class="nav-link active" aria-current="page" href="../PAGS/Media.html">Media</a>
+   </li>
+   <li class="nav-item" >
+    <a class="nav-link active" aria-current="page" href="../PAGS/Contact.html">Contact</a>
+   </li>
+  </ul>
+ </div>
+<!--Contact-->
+<div>
+ <h4>Escribime aca!</h4>
+</div>
+<!--Form-->
+<div class="form2">
+ <div class="mb-3 padding 30px">
+  <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+   <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+</div>
 <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+ <label for="exampleFormControlInput1" class="form-label">Email</label>
+ <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+</div>
+<div class="mb-3">
+ <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+ <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+</div>
+<!--To Home-->
+<div>
+  <div class="home">
+   <li><a href="../index.html" target="_blank">HOME</a></li>
   </div>
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Email</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
-
-
-<!--fin form-->
-<div class="home">
-<li><a href="../index.html" target="_blank">HOME</a> </li>
-</div>
-<!--inicio redes sociales y copyright-->
-<footer>
-    <div class="footer">
-       <a class="btn btn-primary" href="https://www.facebook.com" role="button">Facebook</a>
-       <a class="btn btn-primary" href="https://www.instagram.com" role="button">Instagram</a>
-       <a class="btn btn-primary" href="https://www.soundcloud.com" role="button">SoundCloud</a>
-          <p> <a> Copyright - 2022 © Gon Mind</a> </p>         
-    </div>
-    </footer>                                 
-<!--fin redes sociales y copyright-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
-</html>
+ </div>
+ <!--Footer/Social Networks-->
+ <footer class="d-flex justify-content-center text-center flex-column">
+  <div class="footer">
+   <a class="btn" href="https://www.facebook.com/gmind" role="button"><i class="bi bi-facebook bi-align-center"></i></a>
+   <a class="btn" href="https://www.instagram.com/gon.mind" role="button"><i class="bi bi-instagram bi-align-center"></i></a>
+   <a class="btn" href="https://soundcloud.com/gmind" role="button"><i class="bi bi-cloudy-fill bi-align-center"></i></a>
+   <a class="btn" href="https://www.mixcloud.com/gmind" role="button"><i class="bi bi-cloudy bi-align-center"></i></i></a>
+  </div>
+ <div>
+  <a> Copyright - 2022 © Gon Mind</a> 
+ </div>
+ </footer>			                       	
+ <!--Java Script-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+ </body>
+ </html>
