--- a/PAGS/music.html
+++ b/PAGS/music.html
@@ -4,56 +4,79 @@
 		<title>MUSIC</title>
 		<meta charset=utf-10>
 		<meta name=viewport content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 		<link rel="stylesheet" type="text/css" href="../CSS/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body style="background-image:url('../IMG/g3.jpg'); color: whitesmoke; background-size: cover;">
-
-<!--inicio texto bio-->
+<!--Title-->
 <header>
-  		<h1>MUSIC</h1>
+ <h1>MUSIC</h1>
 </header>
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/172505900&color=%23040404&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/liaisons-dangereuses-los-ninos-del-parque-gmind-brute-remix" title="Liaisons Dangereuses - Los Niños Del Parque (GMIND Brute Remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Liaisons Dangereuses - Los Niños Del Parque (GMIND Brute Remix)</a></div>
-
-
-
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/129776806&color=%23222a2f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/survivor-eye-of-the-tiger" title="Survivor - Eye of the tiger (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Survivor - Eye of the tiger (GMIND original remix)</a></div>
-
-
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/80689019&color=%23222523&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/vangelis-blade-runner-gmind" title="Vangelis - Blade Runner (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Vangelis - Blade Runner (GMIND original remix)</a></div>
-
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/77724254&color=%23383838&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/gmind-dr-gonzo-original-mix" title="GMIND - Dr. Gonzo (Original mix)" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND - Dr. Gonzo (Original mix)</a></div>
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/42498659&color=%23151516&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/liaisons-dangereuses-los-ni-os" title="Liaisons Dangereuses - Los Niños del Parque (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Liaisons Dangereuses - Los Niños del Parque (GMIND original remix)</a></div>
-
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/30937461&color=%230f0c09&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/berlin-express-die-russen" title="Berlin Express - Die Russen Kommen (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Berlin Express - Die Russen Kommen (GMIND original remix)</a></div>
-
-
-<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/17331953&color=%230d1016&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/robotiko-rejekto-umsturz-gmind" title="Robotiko Rejekto - Umsturz jetzt! (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Robotiko Rejekto - Umsturz jetzt! (GMIND original remix)</a></div>
-
-
-<div class="texto">
-
-</div>	
-
-<div class="home">
-<li><a href="../index.html" target="_blank">HOME</a> </li>
+<!--Nav Menu-->
+<div class="menu">
+ <ul class="nav justify-content-center">
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/bio.html">Bio</a>
+  </li>
+  <li class="nav-item">
+   <a class="nav-link active" aria-current="page" href="../PAGS/Tour.html">Tour</a>
+  </li>
+  <li class="nav-item">
+   <a class="nav-link active" aria-current="page" href="../PAGS/Music.html">Music</a>
+  </li>
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/Media.html">Media</a>
+  </li>
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/Contact.html">Contact</a>
+  </li>
+</ul>
 </div>
-<!--inicio redes sociales y copyright-->
-<footer>
-    <div class="footer">
-       <a class="btn btn-primary" href="https://www.facebook.com" role="button">Facebook</a>
-       <a class="btn btn-primary" href="https://www.instagram.com" role="button">Instagram</a>
-       <a class="btn btn-primary" href="https://www.soundcloud.com" role="button">SoundCloud</a>
-          <p> <a> Copyright - 2022 © Gon Mind</a> </p>         
-    </div>
-    </footer>			                       	
-<!--fin redes sociales y copyright-->
+<!--DJ-->
+<header>
+ <h1>DJ</h1>
+</header>
+<div class="form2">
+ <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fgmind%2Fgon-mind-set-under-attak%2F" frameborder="0" ></iframe>
+ <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fgmind%2Fgon-mind-vox-db-darkzide-crew-02-05-2014%2F" frameborder="0" ></iframe>
+ <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fgmind%2Fgon-mind-special-techno-set-for-darkzide-crew-contest%2F" frameborder="0" ></iframe>
+ <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fgmind%2Fgmind-concordance-ii-techno-set-03-01-2014%2F" frameborder="0" ></iframe>
+ <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fgmind%2Fgmind-engine-10-techno-set-08-11-2013%2F" frameborder="0" ></iframe>
+ <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Fgmind%2Fgmind-concordance-techno-set-29-10-2013%2F" frameborder="0" ></iframe>
+</div>
+<!--Porducer-->
+<header>
+    <h1>PRODUCER</h1>
+</header>
+<div class="form2">
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/172505900&color=%23040404&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/liaisons-dangereuses-los-ninos-del-parque-gmind-brute-remix" title="Liaisons Dangereuses - Los Niños Del Parque (GMIND Brute Remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Liaisons Dangereuses - Los Niños Del Parque (GMIND Brute Remix)</a></div>
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/129776806&color=%23222a2f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/survivor-eye-of-the-tiger" title="Survivor - Eye of the tiger (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Survivor - Eye of the tiger (GMIND original remix)</a></div>
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/80689019&color=%23222523&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/vangelis-blade-runner-gmind" title="Vangelis - Blade Runner (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Vangelis - Blade Runner (GMIND original remix)</a></div>
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/77724254&color=%23383838&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/gmind-dr-gonzo-original-mix" title="GMIND - Dr. Gonzo (Original mix)" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND - Dr. Gonzo (Original mix)</a></div>
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/42498659&color=%23151516&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/liaisons-dangereuses-los-ni-os" title="Liaisons Dangereuses - Los Niños del Parque (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Liaisons Dangereuses - Los Niños del Parque (GMIND original remix)</a></div>
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/30937461&color=%230f0c09&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/berlin-express-die-russen" title="Berlin Express - Die Russen Kommen (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Berlin Express - Die Russen Kommen (GMIND original remix)</a></div>
+ <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/17331953&color=%230d1016&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gmind" title="GMIND" target="_blank" style="color: #cccccc; text-decoration: none;">GMIND</a> · <a href="https://soundcloud.com/gmind/robotiko-rejekto-umsturz-gmind" title="Robotiko Rejekto - Umsturz jetzt! (GMIND original remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Robotiko Rejekto - Umsturz jetzt! (GMIND original remix)</a></div>
+</div>
+<!--To Home-->
+<div>
+ <div class="home">
+  <li><a href="../index.html" target="_blank">HOME</a></li>
+ </div>
+</div>
+<!--Footer/Social Networks-->
+<footer class="d-flex justify-content-center text-center flex-column">
+ <div class="footer">
+  <a class="btn" href="https://www.facebook.com/gmind" role="button"><i class="bi bi-facebook bi-align-center"></i></a>
+  <a class="btn" href="https://www.instagram.com/gon.mind" role="button"><i class="bi bi-instagram bi-align-center"></i></a>
+  <a class="btn" href="https://soundcloud.com/gmind" role="button"><i class="bi bi-cloudy-fill bi-align-center"></i></a>
+  <a class="btn" href="https://www.mixcloud.com/gmind" role="button"><i class="bi bi-cloudy bi-align-center"></i></i></a>
+ </div>
+<div>
+ <a> Copyright - 2022 © Gon Mind</a> 
+</div>
+</footer>			                       	
+<!--Java Script-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
