--- a/PAGS/media.html
+++ b/PAGS/media.html
@@ -1,113 +1,105 @@
 <!DOCTYPE html>
 <html>
 <head>
-		<title>MEDIA</title>
-		<meta charset=utf-10>
-		<meta name=viewport content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="../CSS/styles.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+ <title>MEDIA</title>
+ <meta charset=utf-10>
+ <meta name=viewport content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+ <link rel="stylesheet" type="text/css" href="../CSS/styles.css">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body style="background-image:url('../IMG/g8.jpg'); color: whitesmoke; background-size: cover;">
-
-<!--inicio texto bio-->
+<!--Title-->
 <header>
-  		<h1>MEDIA</h1>
+ <h1>MEDIA</h1>
 </header>
-
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-	<div class="carousel-inner">
-	  <div class="carousel-item active">
-		<img src="../IMG/g1.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g2.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g3.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g4.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g5.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g6.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g7.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g8.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g9.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g10.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="../IMG/g11.jpg" class="d-block w-100" alt="...">
-	  </div>
-	</div>
-	<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Previous</span>
-	</button>
-	<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Next</span>
-	</button>
-  </div>
-
-
-<!--
-<div id="fotoGrid">
-    <div>
-		<img src="../IMG/g1.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g2.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g3.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g4.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g5.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g6.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g8.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g9.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g10.jpg" alt="1">
-	</div>
-	<div>
-		<img src="../IMG/g11.jpg" alt="1">
-	</div>
-</div>-->
-
-<div class="home">
-<li><a href="../index.html" target="_blank">HOME</a> </li>
+<!--Nav Menu-->
+<div class="menu">
+ <ul class="nav justify-content-center">
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/bio.html">Bio</a>
+  </li>
+  <li class="nav-item">
+   <a class="nav-link active" aria-current="page" href="../PAGS/Tour.html">Tour</a>
+  </li>
+  <li class="nav-item">
+   <a class="nav-link active" aria-current="page" href="../PAGS/Music.html">Music</a>
+  </li>
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/Media.html">Media</a>
+  </li>
+  <li class="nav-item" >
+   <a class="nav-link active" aria-current="page" href="../PAGS/Contact.html">Contact</a>
+  </li>
+ </ul>
 </div>
-<!--inicio redes sociales y copyright-->
-<footer>
-    <div class="footer">
-       <a class="btn btn-primary" href="https://www.facebook.com" role="button">Facebook</a>
-       <a class="btn btn-primary" href="https://www.instagram.com" role="button">Instagram</a>
-       <a class="btn btn-primary" href="https://www.soundcloud.com" role="button">SoundCloud</a>
-          <p> <a> Copyright - 2022 © Gon Mind</a> </p>         
-    </div>
-    </footer>			                       	
-<!--fin redes sociales y copyright-->
+<!--Carrousel/Media-->
+<div class="slides">
+ <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+   <div class="carousel-item active">
+	<img src="../IMG/g1.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+    <img src="../IMG/g2.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+	<img src="../IMG/g3.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+    <img src="../IMG/g4.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+	<img src="../IMG/g5.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+    <img src="../IMG/g6.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+    <img src="../IMG/g7.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+    <img src="../IMG/g8.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+	<img src="../IMG/g9.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+    <img src="../IMG/g10.jpg" class="d-block w-100" alt="...">
+   </div>
+   <div class="carousel-item">
+	<img src="../IMG/g11.jpg" class="d-block w-100" alt="...">
+   </div>
+</div>
+<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+ <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+ <span class="visually-hidden">Previous</span>
+</button>
+<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+ <span class="carousel-control-next-icon" aria-hidden="true"></span>
+ <span class="visually-hidden">Next</span>
+</button>
+</div>
+</div>
+<!--To Home-->
+<div>
+ <div class="home">
+  <li><a href="../index.html" target="_blank">HOME</a></li>
+ </div>
+</div>
+<!--Footer/Social Networks-->
+<footer class="d-flex justify-content-center text-center flex-column">
+ <div class="footer">
+  <a class="btn" href="https://www.facebook.com/gmind" role="button"><i class="bi bi-facebook bi-align-center"></i></a>
+  <a class="btn" href="https://www.instagram.com/gon.mind" role="button"><i class="bi bi-instagram bi-align-center"></i></a>
+  <a class="btn" href="https://soundcloud.com/gmind" role="button"><i class="bi bi-cloudy-fill bi-align-center"></i></a>
+  <a class="btn" href="https://www.mixcloud.com/gmind" role="button"><i class="bi bi-cloudy bi-align-center"></i></i></a>
+ </div>
+<div>
+ <a> Copyright - 2022 © Gon Mind</a> 
+</div>
+</footer>			                       	
+<!--Java Script-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
