--- a/index.html
+++ b/index.html
@@ -1,47 +1,69 @@
 <!doctype html>
-<html lang="en">
+ <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gon Mind</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
-
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Gon Mind</title>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   </head>
-  <body style="background-image:url('IMG/g1.jpg'); color:  whitesmoke; background-size: cover; background-repeat: no-repeat; background-color: black; background-attachment: fixed; background-position: center; background-position: top;">
+<body style="background-image:url('IMG/g1.jpg'); color:  whitesmoke; background-size: cover; background-repeat: no-repeat; background-color: black; background-attachment: fixed; background-position: center; background-position: top;">
+<!--Title-->
 <header>
-      <h1> GON MIND </h1>
+ <h1> GON MIND </h1>
 </header>
+<!--Nav Menu-->
 <div class="menu">
-<ul class="nav justify-content-center">
-  
-  <li class="nav-item" >
-     <a class="nav-link active" aria-current="page" href="PAGS/bio.html">Bio</a>
-  </li>
-  <li class="nav-item">
+  <ul class="nav justify-content-center">
+   <li class="nav-item" >
+    <a class="nav-link active" aria-current="page" href="PAGS/bio.html">Bio</a>
+   </li>
+   <li class="nav-item">
     <a class="nav-link active" aria-current="page" href="PAGS/Tour.html">Tour</a>
-  </li>
-  <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="PAGS/Music.html">Music</a>
-  </li>
-  <li class="nav-item" >
-      <a class="nav-link active" aria-current="page" href="PAGS/Media.html">Media</a>
-  </li>
-  <li class="nav-item" >
-      <a class="nav-link active" aria-current="page" href="PAGS/Contact.html">Contact</a>
-  </li>
-</ul>
+   </li>
+   <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="PAGS/Music.html">Music</a>
+   </li>
+   <li class="nav-item" >
+    <a class="nav-link active" aria-current="page" href="PAGS/Media.html">Media</a>
+   </li>
+   <li class="nav-item" >
+    <a class="nav-link active" aria-current="page" href="PAGS/Contact.html">Contact</a>
+   </li>
+  </ul>
+ </div>
+ <br>
+ <br>
+<!--Logo-->
+<div class="d-flex justify-content-center">
+ <img src="IMG/index.gif"></img>
 </div>
-
-<footer>
-<div class="footer">
-   <a class="btn btn-primary" href="https://www.facebook.com" role="button">Facebook</a>
-   <a class="btn btn-primary" href="https://www.instagram.com" role="button">Instagram</a>
-   <a class="btn btn-primary" href="https://www.soundcloud.com" role="button">SoundCloud</a>
-      <p> <a> Copyright - 2022 © Gon Mind</a> </p>         
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<!--Audio-->
+<div class="d-flex justify-content-center">
+<audio controls autoplay="true">
+  <source src="Vangelis - Blade Runner (GMIND original remix).mp3" type="audio/mpeg">
+</audio>
 </div>
-</footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  </body>
-</html>
+<!--Footer/Social Networks-->
+<footer class="d-flex justify-content-center text-center flex-column">
+ <div class="footer">
+   <a class="btn" href="https://www.facebook.com/gmind" role="button"><i class="bi bi-facebook bi-align-center"></i></a>
+   <a class="btn" href="https://www.instagram.com/gon.mind" role="button"><i class="bi bi-instagram bi-align-center"></i></a>
+   <a class="btn" href="https://soundcloud.com/gmind" role="button"><i class="bi bi-cloudy-fill bi-align-center"></i></a>
+   <a class="btn" href="https://www.mixcloud.com/gmind" role="button"><i class="bi bi-cloudy bi-align-center"></i></i></a>
+  </div>
+ <div>
+   <a> Copyright - 2022 © Gon Mind</a> 
+ </div>
+ </footer
+ <!--Java Script-->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+ </body>
+ </html>
